# LocalViralCast

./: .gitignore  CLAUDE.md  README.md
app/: index.html  package-lock.json  package.json
app/src/: App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
app/src/components/: Layout.tsx
app/src/pages/: Dashboard.tsx  Lab.tsx  Settings.tsx
app/src/services/: api.ts
server/: config.py  database.py  main.py  requirements.txt
server/models/: __init__.py  asset.py  project.py  setting.py  task.py
server/providers/: ollama.py
server/routers/: health.py  llm.py  media.py  tasks.py
server/services/: __init__.py  ffmpeg_service.py
