[package]
name = "local-viral-cast"
version = "0.1.0"
description = "本地爆款口播视频智能体"
authors = ["you"]
edition = "2021"

[lib]
name = "local_viral_cast_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
